<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/delete_sheet">


    <ImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:src="@drawable/delete"
        android:background="@drawable/delete_shape"
        android:padding="16dp"
        android:contentDescription="Uyarı" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_account_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/bold" />

    <!-- Açıklama -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_account_confirmation"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginBottom="24dp"
        android:lineSpacingExtra="4dp"
        android:fontFamily="@font/regular" />

    <!-- Butonlar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <!-- İptal Butonu -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:text="@string/cancel"
            android:textSize="14sp"
            android:textStyle="bold"
            app:cornerRadius="24dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:textColor="@color/black"
            android:strokeColor="@color/gray"
            android:fontFamily="@font/bold" />

        <!-- Sil Butonu -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/deleteButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:text="@string/delete"
            android:textSize="14sp"
            android:textStyle="bold"
            app:cornerRadius="24dp"
            android:backgroundTint="@color/red"
            android:textColor="@color/white"
            android:fontFamily="@font/bold" />

    </LinearLayout>

</LinearLayout> 