<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/bg1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="80dp"
    tools:context="com.furkansoyleyici.easynote.MainActivity">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:scrollbars="none"
        android:fillViewport="true"
        android:id="@+id/filter_scroll">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:id="@+id/filter" >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:background="@drawable/filter"
                android:contentDescription="@string/cd_filter" />

            <TextView
                android:id="@+id/nofilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_all"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textColor="@color/black"
                android:background="@drawable/filter_selected"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/bold" />

            <TextView
                android:id="@+id/yenieski"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_important"
                android:layout_margin="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textColor="@color/black"
                android:background="@drawable/filter_unselected"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/bold" />

            <TextView
                android:id="@+id/eskiyeni"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_unimportant"
                android:layout_margin="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textColor="@color/black"
                android:background="@drawable/filter_unselected"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/bold" />

            <TextView
                android:id="@+id/fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/filter_unselected"
                android:fontFamily="@font/bold"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="1dp"
                android:paddingBottom="5dp"
                android:text="@string/filter_favorite"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_location"
                android:layout_margin="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textColor="@color/black"
                android:background="@drawable/filter_unselected"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/bold" />

        </LinearLayout>

    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notesRecycler"
        android:layout_below="@id/filter_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="80dp"
        android:paddingTop="20dp"
        android:padding="10dp"
        />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/newNotesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="25dp"
        android:src="@drawable/baseline_add_24"
        android:contentDescription="@string/cd_add_note"
        app:backgroundTint="@color/white"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/menuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="90dp"
        android:src="@drawable/menu"
        android:contentDescription="Menu"
        app:backgroundTint="@color/white"
        app:elevation="8dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="155dp"
        android:src="@drawable/delete"
        android:contentDescription="Seçili notları sil"
        app:backgroundTint="@color/red"
        app:elevation="8dp"
        android:visibility="gone"/>
</RelativeLayout>
