<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg9">

    <LinearLayout
        android:id="@+id/searchContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/cropped"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text"
            android:fontFamily="@font/regular"
            android:hint="@string/map_search"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textColor="@color/edit_text_color" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/yes_button"
            android:fontFamily="@font/regular"
            android:text="Ara"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/selectedLocationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/regular"
            android:gravity="center"
            android:text="@string/map_chooselocation"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/yes_button"
            android:fontFamily="@font/regular"
            android:text="@string/map_confirm"
            android:textColor="@color/white" />
    </LinearLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/searchContainer"
        android:layout_marginTop="0dp" />

</RelativeLayout> 